<resources>
    <string name="app_name">Fooder</string>
    <!-- entry fragment -->
    <string name="hello_fooder_text">Добро пожаловать\nв Fooder</string>
    <string name="explain_to_sign_text">Войдите, чтобы воспользоваться\nвсеми преимуществами Fooder.</string>
    <string name="sign_with_mail_text">Войти с почты</string>

    <!--Sign fragments-->
    <string name="add_mail">Введите почту</string>
    <string name="add_password">Введите пароль</string>
    <string name="sign_in">Войти</string>
    <string name="not_register">Еще не зарегистрированы?</string>
    <string name="add_password_again">Введите пароль еще раз</string>
    <string name="already_register">Уже зарегистрированы? Жмите сюда</string>
    <string name="register">Зарегистрироваться</string>

    <string name="onboarding_gretting">Привет!</string>
    <string name="onboarding_description_first">Не знаете, что
хотите приготовить
на ужин сегодня?
    </string>
    <string name="onboarding_description_second">Не переживайте, мы вам поможем.</string>
    <string name="onboarding_description_third">Давайте начнем</string>
    <string name="made_recipe_cook_text">Приготовить</string>
    <string name="profile_name">Имя</string>
    <string name="profile_second_name">Фамилия</string>
    <string name="profile_diets">Диета</string>
    <string name="profile_made_recipes">Уже приготовленные</string>
    <string name="image_template">https://konfettikzn.ru/media/zoo/images/noimage_9b4871911ca170dd929230ee19503b92.png</string>
    <string name="error_no_internet_connection">Не обнаружено соединение с сервером. Проверьте интернет подключение</string>
    <string name="retry_button_text">Повторить</string>
    <string name="time_to_cook">Время приготовления: %1$s мин</string>
    <string name="start_cooking">Приготовить блюдо</string>
    <string name="lets_cook">Давайте попробуем приготовить выбранное вами блюдо.</string>
    <string name="back_to_feed">Продолжить поиск</string>
    <string name="match_text">Это мэтч, %1s!</string>
    <string name="recipe_search">Поиск рецептов</string>
    <string name="time">%1$s мин</string>
    <string name="difficulty_pl">Сложность:</string>
    <string name="cuisine_pl">Кухня:</string>
    <string name="more_info">Подробнее</string>
    <string name="about_this_dish">О блюде</string>
    <string name="ingredients">Игредиенты</string>
    <string name="ingredient_item">%1$s %2$s</string>
    <string name="recipe_pl">Способ приготовления</string>
    <string name="step_pl">Шаг %1$s</string>
    <string name="finish_cooking">Завершить</string>
    <string name="hide">Свернуть</string>
    <string name="storage_title">Выберите продукты</string>
    <string name="storage_subtitle">которые у вас есть</string>
    <string name="storage_search">Поиск по продуктам</string>
    <string name="sorry_can_t_load_data">Ошибка при загрузке данных</string>
    <string name="try_again">Обновить</string>
    <string name="profile_image_placeholder">https://booking.humanhotel.com/avatar/defaultPic.png</string>
    <string name="user_not_found_exception">Пользователь не найден</string>
    <string name="no_recipe">Извините, мы не можем подобрать блюда из ваших продуктов. Попробуйте добавить продукты в холодильник или посмотрите остальные рецепты из нашей коллекции.</string>
    <string name="feed_by_products_end">Блюда из ваших продуктов закончились. Попробуйте добавить продукты в холодильник или посмотрите остальные рецепты из нашей коллекции.</string>
    <string name="feed_end">Блюда из нашей коллеции закончились.</string>
    <string name="forgot_password_link_text">Забыли пароль?</string>
    <string name="reset_password_button_text">Сбросить пароль</string>
    <string name="enter_email_hint">Введите почту</string>
    <string name="enter_password_hint">Введите пароль</string>
    <string name="passwords_dont_match_hint">Пароли не совпадают</string>
    <string name="user_not_found_exception">Пользователь не найден</string>
</resources>