<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".authentication.presentation.EntryFragment">

    <ImageView
            android:id="@+id/fooder_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fooder_logo"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_entry_top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/hello_fooder_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_fooder_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_large"
            android:layout_marginTop="@dimen/margin_vertical"
            android:textColor="@color/secondary_color"
            app:layout_constraintTop_toBottomOf="@id/fooder_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:id="@+id/explain_sign_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explain_to_sign_text"
            android:layout_marginTop="@dimen/margin_vertical"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintTop_toBottomOf="@id/hello_fooder_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_button_horizontal"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/sign_with_mail_text"
            android:paddingVertical="@dimen/padding_button_vertical"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/button_corner_radius"
            android:backgroundTint="@color/secondary_color"
            app:layout_constraintTop_toBottomOf="@id/explain_sign_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>